--- a/src/app/admin-products/pages/products-management/products-management.component.html
+++ b/src/app/admin-products/pages/products-management/products-management.component.html
@@ -1,1 +1,79 @@
-<p>products-management works!</p>
+<!-- If product list don't exist -->
+@if (!dataSource){
+  <mat-card class="card-nothing" >
+    <mat-card-header>
+      <mat-card-title class="title">Aggregate your products</mat-card-title>
+      <mat-card-subtitle class="subtitle">Start your store now</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-actions>
+      <button class="card-button" mat-flat-button> Aggregate </button>
+    </mat-card-actions>
+  </mat-card>
+} @else {
+  <!-- If product list exist -->
+<div class="table-header">
+  <mat-form-field >
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+  </mat-form-field>
+
+  <button> Add </button>
+</div>
+
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+
+      <!-- Progress Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.name}}% </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
+        <td mat-cell *matCellDef="let row"> {{row.category}} </td>
+      </ng-container>
+
+      <!-- Fruit Column -->
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+        <td mat-cell *matCellDef="let row"> {{row.price}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="rating">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
+        <td mat-cell *matCellDef="let row"> {{row.rating}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  </div>
+
+}
+
+<app-create-and-edit-product (editCanceled)="onCancelEdit()"
+                             (productAdded)="onStudentAdded($event)"
+                             (productUpdated)="onStudentUpdated($event)"
+                             [editMode] = "isEditMode"
+                             [product]="productData"/>
+
+<br>
+
+
+
+
