--- a/src/app/admin-products/components/create-and-edit-product/create-and-edit-product.component.html
+++ b/src/app/admin-products/components/create-and-edit-product/create-and-edit-product.component.html
@@ -1,131 +1,154 @@
-<h2 class="title">{{ editMode ? 'Edit Product' : 'New Product' }}</h2>
-<div class="form-section">
- <form (submit)="onSubmit()" #studentForm='ngForm' class="form-row">
-   <mat-card class="card-general">
-     <mat-card-header>
-       <mat-card-title>General</mat-card-title>
-     </mat-card-header>
-     <mat-card-content>
-       <div class="card-subcontainer subcontainer-1">
-         <p class="subcontainer-title">Product Name</p>
-         <p>
-           <mat-form-field appearance="outline">
-             <mat-label>Product Name</mat-label>
-             <input matInput placeholder="Product Name">
+<div class="sec-form">
+ <form (submit)="onSubmit()" #productForm='ngForm' class="form-row ">
+   <div class="form-section">
+     <div class="header-container">
+       <h2 class="title">{{ editMode ? 'Edit Product' : 'New Product' }}</h2>
+
+       @if (editMode){
+         <div class="header-container-buttons">
+           <button mat-raised-button class="header-button-update">Update</button>
+           <button mat-raised-button class="header-button-cancel" (click)="onCancel()">Cancel</button>
+         </div>
+
+
+       } @else {
+         <div class="header-container-buttons">
+           <button mat-raised-button class="header-button">Add Product</button>
+           <button mat-raised-button class="header-button-cancel" (click)="onCancel()">Cancel</button>
+         </div>
+
+
+       }
+
+     </div>
+
+
+
+     <mat-card class="card-general">
+       <mat-card-header>
+         <mat-card-title>General</mat-card-title>
+       </mat-card-header>
+       <mat-card-content>
+         <div class="card-subcontainer subcontainer-1">
+           <p class="subcontainer-title">Product Name</p>
+           <p>
+             <mat-form-field appearance="outline">
+               <mat-label>Product Name</mat-label>
+               <input matInput placeholder="Product Name" required [(ngModel)]="product.name" [ngModelOptions]="{standalone: true}">
+             </mat-form-field>
+           </p>
+           <p class="text-under">A product name is required and recommended to be unique. </p>
+         </div>
+
+         <div class="card-subcontainer subcontainer-2" >
+           <p class="subcontainer-title">Description</p>
+           <mat-form-field class="description-text-area" appearance="outline">
+             <mat-label>Type your text here...</mat-label>
+             <textarea matInput [(ngModel)]="product.description" [ngModelOptions]="{standalone: true}"></textarea>
            </mat-form-field>
-         </p>
-         <p class="text-under">A product name is required and recommended to be unique. </p>
-       </div>
+           <p class="text-under">Set a description to the product for better visibility.</p>
+         </div>
 
-      <div class="card-subcontainer subcontainer-2" >
-        <p class="subcontainer-title">Description</p>
-        <mat-form-field class="description-text-area" appearance="outline">
-          <mat-label>Type your text here...</mat-label>
-          <textarea matInput></textarea>
-        </mat-form-field>
-        <p class="text-under">Set a description to the product for better visibility.</p>
-      </div>
+       </mat-card-content>
 
-     </mat-card-content>
+     </mat-card>
 
-   </mat-card>
+     <mat-card class="card-general card-price">
+       <mat-card-header>
+         <mat-card-title>Price</mat-card-title>
+       </mat-card-header>
+       <mat-card-content>
+         <div class="card-subcontainer subcontainer-1">
+           <p class="subcontainer-title">Product Price</p>
+           <p>
+             <mat-form-field appearance="outline">
+               <mat-label>Product Price</mat-label>
+               <input matInput placeholder="Product Price" required [(ngModel)]="product.price" [ngModelOptions]="{standalone: true}">
+             </mat-form-field>
+           </p>
+         </div>
+       </mat-card-content>
 
-   <mat-card class="card-general card-price">
-     <mat-card-header>
-       <mat-card-title>Price</mat-card-title>
-     </mat-card-header>
-     <mat-card-content>
-       <div class="card-subcontainer subcontainer-1">
-         <p class="subcontainer-title">Product Price</p>
-         <p>
-           <mat-form-field appearance="outline">
-             <mat-label>Product Price</mat-label>
-             <input matInput placeholder="Product Price">
-           </mat-form-field>
-         </p>
-       </div>
-     </mat-card-content>
+     </mat-card>
 
-   </mat-card>
-
-   <mat-card class="card-general card-status">
-     <mat-card-header>
-       <mat-card-title>Status</mat-card-title>
-     </mat-card-header>
-     <mat-card-content>
-       <div class="card-subcontainer subcontainer-1">
-         <p class="subcontainer-title">Status</p>
-         <p>
-           <mat-form-field appearance="outline">
-             <mat-label>Select</mat-label>
-             <mat-select>
-               <mat-option value="published">Published</mat-option>
-               <mat-option value="inactive">Inactive</mat-option>
-             </mat-select>
-           </mat-form-field>
-         </p>
-       </div>
-     </mat-card-content>
-   </mat-card>
+     <mat-card class="card-general card-status">
+       <mat-card-header>
+         <mat-card-title>Status</mat-card-title>
+       </mat-card-header>
+       <mat-card-content>
+         <div class="card-subcontainer subcontainer-1">
+           <p class="subcontainer-title">Status</p>
+           <p>
+             <mat-form-field appearance="outline">
+               <mat-label>Select</mat-label>
+               <mat-select [(ngModel)]="product.availability" [ngModelOptions]="{standalone: true}">
+                 <mat-option value="true">Published</mat-option>
+                 <mat-option value="false">Inactive</mat-option>
+               </mat-select>
+             </mat-form-field>
+           </p>
+         </div>
+       </mat-card-content>
+     </mat-card>
 
 
 
-   <mat-card class="card-general card-details">
-     <mat-card-header>
-       <mat-card-title>Details</mat-card-title>
-     </mat-card-header>
-     <mat-card-content>
-       <div class="card-subcontainer subcontainer-1">
-         <p class="subcontainer-title">Category</p>
-         <p>
-           <mat-form-field appearance="outline">
-             <mat-label>Select</mat-label>
-             <mat-select>
-               <mat-option value="Computer">Computer</mat-option>
-               <mat-option value="Cellphone">Cellphone</mat-option>
-               <mat-option value="Computer">Headphones</mat-option>
-               <mat-option value="Cellphone">Electronics</mat-option>
-               <mat-option value="Cellphone">Fashion</mat-option>
+     <mat-card class="card-general card-details">
+       <mat-card-header>
+         <mat-card-title>Details</mat-card-title>
+       </mat-card-header>
+       <mat-card-content>
+         <div class="card-subcontainer subcontainer-1">
+           <p class="subcontainer-title">Category</p>
+           <p>
+             <mat-form-field appearance="outline">
+               <mat-label>Select</mat-label>
+               <mat-select [(ngModel)]="product.category" [ngModelOptions]="{standalone: true}">
+                 <mat-option value="Computer">Computer</mat-option>
+                 <mat-option value="Cellphone">Cellphone</mat-option>
+                 <mat-option value="Computer">Headphones</mat-option>
+                 <mat-option value="Cellphone">Electronics</mat-option>
+                 <mat-option value="Cellphone">Fashion</mat-option>
 
-             </mat-select>
-           </mat-form-field>
-         </p>
-         <p class="text-under">Choose the category is very important for show the products. </p>
-       </div>
+               </mat-select>
+             </mat-form-field>
+           </p>
+           <p class="text-under">Choose the category is very important for show the products. </p>
+         </div>
 
-       <div class="card-subcontainer subcontainer-1">
-         <p class="subcontainer-title">Brand</p>
-         <p>
-           <mat-form-field appearance="outline">
-             <mat-label>Product Brand</mat-label>
-             <input matInput placeholder="Write the Brand">
-           </mat-form-field>
-         </p>
-         <p class="text-under">Select the brand for a more optimal publication </p>
-       </div>
-       <div class="card-subcontainer subcontainer-1">
-         <p class="subcontainer-title">Model Number</p>
-         <p>
-           <mat-form-field appearance="outline">
-             <mat-label>Model Number</mat-label>
-             <input matInput placeholder="Model Number">
-           </mat-form-field>
-         </p>
-       </div>
-       <div class="card-subcontainer subcontainer-1">
-         <p class="subcontainer-title">Manufacture Number (MPN)</p>
-         <p>
-           <mat-form-field appearance="outline">
-             <mat-label>Manufacture Number</mat-label>
-             <input matInput placeholder="MPN">
-           </mat-form-field>
-         </p>
-       </div>
-     </mat-card-content>
+         <div class="card-subcontainer subcontainer-1">
+           <p class="subcontainer-title">Brand</p>
+           <p>
+             <mat-form-field appearance="outline">
+               <mat-label>Product Brand</mat-label>
+               <input matInput placeholder="Write the Brand" required [(ngModel)]="product.brand" [ngModelOptions]="{standalone: true}">
+             </mat-form-field>
+           </p>
+           <p class="text-under">Select the brand for a more optimal publication </p>
+         </div>
+         <div class="card-subcontainer subcontainer-1">
+           <p class="subcontainer-title">Model Number</p>
+           <p>
+             <mat-form-field appearance="outline">
+               <mat-label>Model Number</mat-label>
+               <input matInput placeholder="Model Number" required [(ngModel)]="product.modelNumber" [ngModelOptions]="{standalone: true}">
+             </mat-form-field>
+           </p>
+         </div>
+         <div class="card-subcontainer subcontainer-1">
+           <p class="subcontainer-title">Manufacture Number (MPN)</p>
+           <p>
+             <mat-form-field appearance="outline">
+               <mat-label>Manufacture Number</mat-label>
+               <input matInput placeholder="MPN" required [(ngModel)]="product.manufacturer"[ngModelOptions]="{standalone: true}">
+             </mat-form-field>
+           </p>
+         </div>
+       </mat-card-content>
 
-   </mat-card>
+     </mat-card>
 
-
+   </div>
 
 
 
