--- a/src/app/admin-products/pages/products-management/products-management.component.html
+++ b/src/app/admin-products/pages/products-management/products-management.component.html
@@ -9,18 +9,22 @@
       <button class="card-button" mat-flat-button> Aggregate </button>
     </mat-card-actions>
   </mat-card>
-} @else {
+} @else if(dataSource && !isVisibleCard && !isEditMode){
+
+
   <!-- If product list exist -->
-<div class="table-header">
-  <mat-form-field >
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-  </mat-form-field>
 
-  <button> Add </button>
-</div>
+  <div class="management-container">
+  <div class="table-header">
+    <mat-form-field appearance="outline" class="table-header-search">
+      <mat-label>Search</mat-label>
+      <input matInput class="custom-input" (keyup)="applyFilter($event)" placeholder="Search" #input>
+    </mat-form-field>
 
-  <div class="mat-elevation-z8">
+    <button (click)="addProduct()" mat-raised-button> Add Product</button>
+  </div>
+
+  <div >
     <table mat-table [dataSource]="dataSource" matSort>
 
       <!-- ID Column -->
@@ -32,7 +36,7 @@
       <!-- Progress Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}}% </td>
+        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
       </ng-container>
 
       <!-- Name Column -->
@@ -52,6 +56,14 @@
         <td mat-cell *matCellDef="let row"> {{row.rating}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="actions">
+        <th *matHeaderCellDef mat-header-cell> Actions</th>
+        <td *matCellDef="let element" mat-cell>
+          <a (click)="onEditItem(element)" href="javascript:void(0)"><mat-icon>edit</mat-icon></a>
+          <a (click)="onDeleteItem(element)" href="javascript:void(0)"><mat-icon>delete</mat-icon></a>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
@@ -64,14 +76,18 @@
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
   </div>
 
+
+</div>
+
+
+} @else {
+  <app-create-and-edit-product (editCanceled)="onCancelEdit()"
+                               (productAdded)="onProductAdded($event)"
+                               (productUpdated)="onProductUpdated($event)"
+                               [editMode] = "isEditMode"
+                               [visible]="isVisibleCard"
+                               [product]="productData"/>
 }
-
-<app-create-and-edit-product (editCanceled)="onCancelEdit()"
-                             (productAdded)="onStudentAdded($event)"
-                             (productUpdated)="onStudentUpdated($event)"
-                             [editMode] = "isEditMode"
-                             [product]="productData"/>
-
 <br>
 
 
