--- a/src/app/admin-products/pages/products-management/products-management.component.css
+++ b/src/app/admin-products/pages/products-management/products-management.component.css
@@ -26,13 +26,31 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: aquamarine;
 }
 .table-header button{
-  height: 40px;
-  width: 80px;
+  height: 50px;
+  width: 140px;
   border-radius: 5px;
   border: none;
-  background-color: #1CAEC1;
+  background-color: #1B2854;
+color: white;
+  font-size: 15px;
+  font-weight: 600;
+}
+.table-header-search{
+padding: 0;
+  margin: 0;
+  height: 60px;
 
 }
+
+.management-container{
+  background-color: white;
+  border-radius: 10px;
+  height: 80vh;
+  padding: 20px;
+  min-width: 600px;
+  max-width: 80%;
+  margin: 0 auto;
+}
+
