--- a/src/app/admin-products/components/create-and-edit-product/create-and-edit-product.component.css
+++ b/src/app/admin-products/components/create-and-edit-product/create-and-edit-product.component.css
@@ -81,6 +81,10 @@ mat-card-header{
 .subcontainer-2{
   margin-top: 30px;
 }
+
+.subcontainer-5{
+  height: 100%;
+}
 .cards-container__left{
   height: 520px;
   display: flex;
@@ -98,41 +102,98 @@ mat-card-header{
 .card-details{
   height: 650px;
 }
-@media (min-width: 1400px) {
-  /*.cards-container{*/
-  /*  height: 900px;*/
-  /*  display: grid;*/
-  /*  grid-template-columns: 1fr 2fr;*/
-  /*  grid-template-rows: repeat(4,1fr) ;*/
+.card-files mat-card-content{
+  height: 100%;
+}
 
-  /*}*/
-  /*.card-general{*/
-  /*  width: 700px;*/
-  /*  grid-area: 1/2/3/3;*/
-  /*}*/
-  /*.card-status{*/
-  /*  width: 250px;*/
-  /*  grid-area: 1 / 1 /2 /2 ;*/
-  /*}*/
-  /*.card-price{*/
-  /*  width: 250px;*/
-  /*  grid-area: 2/1/3/2 ;*/
-  /*}*/
-  /*.card-details{*/
-  /*  grid-area: 3/1/4/3 ;*/
-  /*}*/
+.files-container_case-1{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+.files-container_case-1 button{
+  height: 60px;
+  width: 200px;
+  background-color: #003785;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 10px;
+
+}
+
+.files-container_case-1 p{
+  margin-top: 15px;
+  font-size: 15px;
+  color: #CACEDE;
+  font-weight: 400;
+}
+
+.files-container_case-2{
+  width: 100%;
+  height: 95%;
+  display: grid;
+  grid-template-rows: 3fr 1fr;
+  grid-gap: 10px;
+}
+.files-container_case-2 .case-2_container-add{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.files-container_case-2 button{
+  height: 30px;
+  width: 100px;
+  background-color: #003785;
+  color: white;
+  font-size: 12px;
+  font-weight: 500;
+  border-radius: 10px;
+
+}
+
+.files-container_case-2 p{
+  margin-top: 7px;
+  font-size: 15px;
+  color: #CACEDE;
+  font-weight: 400;
+}
+
+.files-container_case-2 .image-preview{
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.files-container_case-2 .image-preview img{
+  object-fit: contain;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+
+@media (min-width: 1400px) {
   .sec-form{
     max-width: 1600px;
     margin: 0 auto;
+  }
+
+  .cards-container{
+    display: grid;
+    grid-template-columns: 2fr 1fr 3fr;
+    grid-template-rows: 1fr 1fr;
   }
   .card-general {
     grid-area: 1/1/2/2;
     height: 550px;
     width: 100%;
-  }
-  .cards-container{
-    display: grid;
-    grid-template-columns: 2fr 1fr 3fr;
   }
   .card-details{
     grid-area: 1/3/2/4;
@@ -166,5 +227,42 @@ mat-card-header{
   .card-details mat-card-content .subcontainer-2{
     padding-bottom: 0;
     height: 70px;
+  }
+
+  .card-files{
+    grid-area: 2/1/3/4;
+    width: 100%;
+    height: 100%;
+  }
+  .subcontainer-5{
+    height: 100%;
+  }
+  .files-container_case-1{
+    margin: 0 auto;
+    width: 90%;
+    height: 90%;
+    border: 2px dashed #B9B9B9;
+  }
+  .files-container_case-1:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+    /*cursor: pointer;*/
+  }
+  .files-container_case-2{
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 15px;
+    place-items: center;
+  }
+  .files-container_case-2 .image-preview{
+    max-height: 500px;
+    max-width: 700px;
+    border-radius: 10px;
+    grid-area: 1/2/2/3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .case-2_container-add button{
+    height: 50px;
+    width: 200px;
   }
 }
