--- a/src/app/admin-products/components/create-and-edit-product/create-and-edit-product.component.css
+++ b/src/app/admin-products/components/create-and-edit-product/create-and-edit-product.component.css
@@ -3,7 +3,27 @@
   justify-content: space-between;
   /*background-color: blueviolet;*/
   align-items: center;
+  height: 100px;
 }
+.header-container-links{
+  display: flex;
+  justify-content: space-between;
+  width: 200px;
+}
+.header-container-links a{
+  flex: 1;
+  font-size: 20px; /* Increased font size */
+  color: #1B2854;
+  text-decoration: none;
+  transition: background-color 0.3s, color 0.3s;
+  border: #1CAEC1;
+}
+
+.header-container-links a:hover{
+  cursor: pointer;
+  color:#1C85EB;
+}
+
 .header-container-buttons{
   display: flex;
   justify-content: space-around;
@@ -18,10 +38,12 @@ border: none;
 .header-button-update{
   background-color: #1CAEC1;
   color: white;
+  width: 100px;
 }
 .header-button-cancel{
   background-color: #B9B9B9;
   color: white;
+  width: 100px;
 }
 
 
@@ -91,6 +113,12 @@ mat-card-header{
   justify-content: space-between;
   flex-direction: column;
 }
+.cards-container__down{
+  height: 520px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
 .card-price{
   height: 250px;
 }
@@ -101,6 +129,12 @@ mat-card-header{
 
 .card-details{
   height: 650px;
+}
+.card-stock{
+  height: 250px;
+}
+.card-rating{
+  height: 250px;
 }
 .card-files mat-card-content{
   height: 100%;
@@ -149,8 +183,8 @@ mat-card-header{
   justify-content: center;
 }
 .files-container_case-2 button{
-  height: 30px;
-  width: 100px;
+  height: 50px;
+  width: 150px;
   background-color: #003785;
   color: white;
   font-size: 12px;
@@ -229,8 +263,24 @@ mat-card-header{
     height: 70px;
   }
 
+  .cards-container__down{
+    grid-area: 2/1/3/2;
+    width: 100%;
+    height: 100%;
+
+  }
+
+  .card-stock{
+    width: 100%;
+    height: 270px;
+  }
+
+  .card-rating{
+    width: 100%;
+    height: 270px;
+  }
   .card-files{
-    grid-area: 2/1/3/4;
+    grid-area: 2/2/3/4;
     width: 100%;
     height: 100%;
   }
