--- a/src/app/public/pages/entrepreneur-page/entrepreneur-page.component.html
+++ b/src/app/public/pages/entrepreneur-page/entrepreneur-page.component.html
@@ -13,12 +13,13 @@
           Products
         </span>
       </a>
-      <a mat-list-item [routerLink]="'sales'" class="sidenav-container-text">
-        <mat-icon>shop</mat-icon>
+      <a mat-list-item [routerLink]="'orders'" class="sidenav-container-text">
+        <mat-icon>Order</mat-icon>
         <span>
-          Sales
+          Orders
         </span>
       </a>
+
     </mat-nav-list>
 
 
